feat: add a header of the lending

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -16,24 +20,68 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@components": ["components"],
-      "@components/*": ["components/*"],
-      "@layout": ["layout"],
-      "@layout/*": ["layout/*"],
-      "@templates": ["templates"],
-      "@templates/*": ["templates/*"],
-      "@hooks": ["hooks"],
-      "@hooks/*": ["hooks/*"],
-      "@public": ["public"],
-      "@public/*": ["public/*"],
-      "@api": ["api"],
-      "@api/*": ["api/*"],
-      "@styles": ["styles"],
-      "@styles/*": ["styles/*"],
-      "@servises": ["servises"],
-      "@servises/*": ["servises/*"],
-      "@types": ["types"],
-      "@types/*": ["types/*"]
+      "@components": [
+        "components"
+      ],
+      "@components/*": [
+        "components/*"
+      ],
+      "@layout": [
+        "layout"
+      ],
+      "@layout/*": [
+        "layout/*"
+      ],
+      "@templates": [
+        "templates"
+      ],
+      "@templates/*": [
+        "templates/*"
+      ],
+      "@hooks": [
+        "hooks"
+      ],
+      "@hooks/*": [
+        "hooks/*"
+      ],
+      "@public": [
+        "public"
+      ],
+      "@public/*": [
+        "public/*"
+      ],
+      "@api": [
+        "api"
+      ],
+      "@api/*": [
+        "api/*"
+      ],
+      "@styles": [
+        "styles"
+      ],
+      "@styles/*": [
+        "styles/*"
+      ],
+      "@servises": [
+        "servises"
+      ],
+      "@servises/*": [
+        "servises/*"
+      ],
+      "@types": [
+        "types"
+      ],
+      "@types/*": [
+        "types/*"
+      ]
     }
-  }
+  },
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
