--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
     "sass": "^1.68.0"
+  },
+  "devDependencies": {
+    "@types/node": "20.6.5",
+    "typescript": "5.2.2"
   }
 }
