--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.6",
+    "@types/axios": "^0.14.0",
     "axios": "^1.5.0",
     "next": "13.5.2",
     "next-redux-wrapper": "^8.1.0",
