feat: check authorization

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -73,6 +73,12 @@
       ],
       "@types/*": [
         "types/*"
+      ],
+      "@utils": [
+        "utils"
+      ],
+      "@utils/*": [
+        "utils/*"
       ]
     }
   },
