--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.6",
     "@types/axios": "^0.14.0",
     "axios": "^1.5.0",
+    "eslint-config-next": "^14.0.3",
     "next": "13.5.2",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
@@ -21,6 +22,10 @@
   },
   "devDependencies": {
     "@types/node": "20.6.5",
+    "@typescript-eslint/eslint-plugin": "^6.13.0",
+    "@typescript-eslint/parser": "^6.13.0",
+    "eslint": "^8.54.0",
+    "prettier": "^3.1.0",
     "typescript": "5.2.2"
   }
 }
