--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-redux": "^8.1.2",
     "sass": "^1.68.0"
   },
